Added optimizers desc and started working on validation loop

--- a/Group_02_Midterm_Project.ipynb
+++ b/Group_02_Midterm_Project.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMHob0gNfzO/y3idueNK4dQ",
+      "authorship_tag": "ABX9TyONpF1gytucgGqGbw8QuqLf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 65,
       "metadata": {
         "id": "K2SPt3PBXpZJ"
       },
@@ -42,8 +42,9 @@
         "import torchvision.transforms as transforms\n",
         "from torchvision import datasets\n",
         "import matplotlib.pyplot as plt\n",
-        "from torch.utils.data import DataLoader\n",
-        "import torch.optim as optim"
+        "from torch.utils.data import Subset, DataLoader\n",
+        "import torch.optim as optim\n",
+        "from sklearn.model_selection import KFold"
       ]
     },
     {
@@ -436,7 +437,7 @@
     {
       "cell_type": "code",
       "source": [
-        "def train(loss_function, optimizer = None):\n",
+        "def train(train_loader, loss_function, optimizer):\n",
         "\n",
         "  # move model to gpu\n",
         "  model = Kmnist_Net().to(device)\n",
@@ -484,7 +485,8 @@
         "\n",
         "    train_acc = ( correct / total ) * 100\n",
         "    print(f\"Epoch [{epoch + 1}/{epochs}], Loss: {running_loss:.4f},  Train Accuracy : {train_acc:.2f}%\")\n",
-        "\n"
+        "\n",
+        "  return model\n"
       ],
       "metadata": {
         "id": "Yy9XwrFmAlIk"
@@ -504,7 +506,7 @@
     {
       "cell_type": "code",
       "source": [
-        "def Evaluate(model):\n",
+        "def Evaluate(model, data_loader):\n",
         "\n",
         "  correct = 0\n",
         "  total = 0\n",
@@ -515,7 +517,7 @@
         "  # disavle gradient calculations\n",
         "  torch.no_grad()\n",
         "  with torch.no_grad():\n",
-        "    for images, labels in test_loader:\n",
+        "    for images, labels in data_loader:\n",
         "\n",
         "        images = images.to(device)\n",
         "        labels = labels.to(device)\n",
@@ -548,10 +550,226 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Now we can start creating Hyperparameter Tuning in order to find best hyperparameters.\n",
+        "### We have to compare performance of\n",
+        "\n",
+        "\n",
+        "\n",
+        "*   Adam (Adaptive Moment Estimation)\n",
+        "*   RMSprop (Root Mean Square Prop)\n",
+        "*   AdamW (Adam with Weight Decay)\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "v22YmsztU3fq"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 1. Adam\n",
+        "  - For adam below are the parameters that we can adjust\n",
+        "  ### torch.optim.Adam(params, lr=0.001, betas=(0.9, 0.999), eps=1e-08, weight_decay=0, amsgrad=False, *, foreach=None, maximize=False, capturable=False, differentiable=False, fused=None, decoupled_weight_decay=False)\n",
+        "  - But we are going to change learning rate only becasue that is the most impactful.\n",
+        "\n",
+        "### 2. RMSprop\n",
+        "  - For RMSprop below are the parameters that we can adjust\n",
+        "  ### torch.optim.RMSprop(params, lr=0.01, alpha=0.99, eps=1e-08, weight_decay=0, momentum=0, centered=False, capturable=False, foreach=None, maximize=False, differentiable=False)\n",
+        "\n",
+        "### 3. AdamW\n",
+        "  - For AdamW below are the parameters that we can adjust\n",
+        "  ### torch.optim.AdamW(params, lr=0.001, betas=(0.9, 0.999), eps=1e-08, weight_decay=0.01, amsgrad=False, *, maximize=False, foreach=None, capturable=False, differentiable=False, fused=None)\n",
+        "  - Here, we will analyze for different weight decay too.\n",
+        "  "
+      ],
+      "metadata": {
+        "id": "80DuG2dIXDYa"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "learning_rates = [0.01, 0.001, 0.0001]\n",
+        "weight_decays = [0, 0.0001, 0.001]  # for AdamW\n",
+        "\n",
+        "\n",
+        "# combinations\n",
+        "\n",
+        "optimizers = {\n",
+        "    'Adam': {'lr': learning_rates},\n",
+        "    'RMSprop': {'lr': learning_rates, 'momentum': [0.0, 0.9] },\n",
+        "    'AdamW': {'lr': learning_rates, 'weight_decay': weight_decays}\n",
+        "}\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "9iizq6SJLMS9"
+      },
+      "execution_count": 56,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import itertools\n",
+        "\n",
+        "for optimizer_name, grid in optimizers.items():\n",
+        "  keys = grid.keys()\n",
+        "  values = grid.values()\n",
+        "\n",
+        "  for combo in itertools.product(*values):\n",
+        "      param_dict = dict(zip(keys, combo))\n",
+        "      print(f\"Optimizer : {optimizer_name}, Params: {param_dict}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4gTjfGXNb1b-",
+        "outputId": "c33fb305-02ef-4f5c-859d-df34ba3cb7ba"
+      },
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Optimizer : Adam, Params: {'lr': 0.01}\n",
+            "Optimizer : Adam, Params: {'lr': 0.001}\n",
+            "Optimizer : Adam, Params: {'lr': 0.0001}\n",
+            "Optimizer : RMSprop, Params: {'lr': 0.01, 'momentum': 0.0}\n",
+            "Optimizer : RMSprop, Params: {'lr': 0.01, 'momentum': 0.9}\n",
+            "Optimizer : RMSprop, Params: {'lr': 0.001, 'momentum': 0.0}\n",
+            "Optimizer : RMSprop, Params: {'lr': 0.001, 'momentum': 0.9}\n",
+            "Optimizer : RMSprop, Params: {'lr': 0.0001, 'momentum': 0.0}\n",
+            "Optimizer : RMSprop, Params: {'lr': 0.0001, 'momentum': 0.9}\n",
+            "Optimizer : AdamW, Params: {'lr': 0.01, 'weight_decay': 0}\n",
+            "Optimizer : AdamW, Params: {'lr': 0.01, 'weight_decay': 0.0001}\n",
+            "Optimizer : AdamW, Params: {'lr': 0.01, 'weight_decay': 0.001}\n",
+            "Optimizer : AdamW, Params: {'lr': 0.001, 'weight_decay': 0}\n",
+            "Optimizer : AdamW, Params: {'lr': 0.001, 'weight_decay': 0.0001}\n",
+            "Optimizer : AdamW, Params: {'lr': 0.001, 'weight_decay': 0.001}\n",
+            "Optimizer : AdamW, Params: {'lr': 0.0001, 'weight_decay': 0}\n",
+            "Optimizer : AdamW, Params: {'lr': 0.0001, 'weight_decay': 0.0001}\n",
+            "Optimizer : AdamW, Params: {'lr': 0.0001, 'weight_decay': 0.001}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Cross Validation Loop"
+      ],
+      "metadata": {
+        "id": "QFX0ojNkieca"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 5 k-fold\n",
+        "kf = KFold(n_splits=5, shuffle=True, random_state=66)\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AJM7J6kpccUw",
+        "outputId": "da96cb38-d476-45a1-9fc1-877bca86b7a2"
+      },
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "KFold(n_splits=5, random_state=66, shuffle=True)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 66
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for optimizer_name, grid in optimizers.items():\n",
+        "    keys = grid.keys()\n",
+        "    values = grid.values()\n",
+        "\n",
+        "    for combo in itertools.product(*values):\n",
+        "        param_dict = dict(zip(keys, combo))\n",
+        "        fold_accuracies = []\n",
+        "        total_time = 0\n",
+        "\n",
+        "        print(f\"\\nOptimizer: {optimizer_name}, Params: {param_dict}\")\n",
+        ""
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wV5OTIkVipTh",
+        "outputId": "e3dd4112-6d85-4b11-b3fc-809d006cf316"
+      },
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Optimizer: Adam, Params: {'lr': 0.01}\n",
+            "\n",
+            "Optimizer: Adam, Params: {'lr': 0.001}\n",
+            "\n",
+            "Optimizer: Adam, Params: {'lr': 0.0001}\n",
+            "\n",
+            "Optimizer: RMSprop, Params: {'lr': 0.01, 'momentum': 0.0}\n",
+            "\n",
+            "Optimizer: RMSprop, Params: {'lr': 0.01, 'momentum': 0.9}\n",
+            "\n",
+            "Optimizer: RMSprop, Params: {'lr': 0.001, 'momentum': 0.0}\n",
+            "\n",
+            "Optimizer: RMSprop, Params: {'lr': 0.001, 'momentum': 0.9}\n",
+            "\n",
+            "Optimizer: RMSprop, Params: {'lr': 0.0001, 'momentum': 0.0}\n",
+            "\n",
+            "Optimizer: RMSprop, Params: {'lr': 0.0001, 'momentum': 0.9}\n",
+            "\n",
+            "Optimizer: AdamW, Params: {'lr': 0.01, 'weight_decay': 0}\n",
+            "\n",
+            "Optimizer: AdamW, Params: {'lr': 0.01, 'weight_decay': 0.0001}\n",
+            "\n",
+            "Optimizer: AdamW, Params: {'lr': 0.01, 'weight_decay': 0.001}\n",
+            "\n",
+            "Optimizer: AdamW, Params: {'lr': 0.001, 'weight_decay': 0}\n",
+            "\n",
+            "Optimizer: AdamW, Params: {'lr': 0.001, 'weight_decay': 0.0001}\n",
+            "\n",
+            "Optimizer: AdamW, Params: {'lr': 0.001, 'weight_decay': 0.001}\n",
+            "\n",
+            "Optimizer: AdamW, Params: {'lr': 0.0001, 'weight_decay': 0}\n",
+            "\n",
+            "Optimizer: AdamW, Params: {'lr': 0.0001, 'weight_decay': 0.0001}\n",
+            "\n",
+            "Optimizer: AdamW, Params: {'lr': 0.0001, 'weight_decay': 0.001}\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "9iizq6SJLMS9"
+        "id": "N6mwS27GivXC"
       },
       "execution_count": null,
       "outputs": []
